feat: init jumo

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,7 +14,9 @@
     "preset": "@jumo-monorepo/jest-presets/node"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.27",
     "@jumo-monorepo/logger": "*",
+    "ai": "^5.0.37",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
