--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -12,13 +12,17 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@ai-sdk/react": "^2.0.37",
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-google-signin/google-signin": "^16.0.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "@stardazed/streams-text-encoding": "^1.0.2",
     "@supabase/supabase-js": "^2.57.2",
+    "@ungap/structured-clone": "^1.3.0",
+    "ai": "^5.0.37",
     "expo": "~53.0.22",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
