--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -45,6 +45,12 @@
         }
       ],
       [
+        "expo-image-picker",
+        {
+          "photosPermission": "Allow $(PRODUCT_NAME) to access your photos for nutritional analysis"
+        }
+      ],
+      [
         "@react-native-google-signin/google-signin",
         {
           "iosUrlScheme": "com.googleusercontent.apps.775079319916-0iijlsjmhfrr23qt1jh422g000ceksdg"
