wip: image selection

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -22,8 +22,11 @@
     "express": "^5.1.0",
     "express-jwt": "^8.5.1",
     "knex": "^3.1.0",
+    "multer": "^2.0.2",
     "pg": "^8.16.3",
-    "uuid": "^11.1.0"
+    "sharp": "^0.34.3",
+    "uuid": "^11.1.0",
+    "zod": "^4.1.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.34.0",
@@ -35,6 +38,7 @@
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
     "@types/morgan": "^1.9.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.18.0",
     "@types/pg": "^8.15.5",
     "@types/uuid": "^10.0.0",
