--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -13,7 +13,7 @@
   "devDependencies": {
     "@jumo-monorepo/eslint-config": "*",
     "@jumo-monorepo/typescript-config": "*",
-    "@types/react": "~19.0.10",
+    "@types/react": "^19.1.13",
     "eslint": "^9.34.0",
     "typescript": "~5.8.3"
   },
