--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -25,6 +25,7 @@
     "@ungap/structured-clone": "^1.3.0",
     "ai": "^5.0.37",
     "expo": "~54.0.8",
+    "expo-apple-authentication": "~8.0.7",
     "expo-blur": "~15.0.7",
     "expo-camera": "~17.0.8",
     "expo-constants": "~18.0.9",
