--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,6 +14,7 @@
     "preset": "@jumo-monorepo/jest-presets/node"
   },
   "dependencies": {
+    "@ai-sdk/cerebras": "^1.0.18",
     "@ai-sdk/openai": "^2.0.27",
     "@jumo-monorepo/logger": "*",
     "ai": "^5.0.37",
