backend: auth + db connection

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -22,9 +22,10 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "express-jwt": "^8.5.1",
-    "knex": "^3.1.0",
+    "jwks-rsa": "^3.2.0",
     "multer": "^2.0.2",
     "pg": "^8.16.3",
+    "postgres": "^3.4.7",
     "sharp": "^0.34.3",
     "uuid": "^11.1.0",
     "zod": "^4.1.7"
