--- a/renovate.json
+++ b/renovate.json
@@ -1,7 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "rangeStrategy": "bump",
-  "extends": [
-    "config:recommended"
-  ]
+  "extends": ["config:recommended"],
+  "ignorePaths": ["apps/mobile/**"]
 }
