chore: app variants

--- a/apps/mobile/eas.json
+++ b/apps/mobile/eas.json
@@ -1,13 +1,39 @@
 {
   "cli": {
-    "version": ">= 16.3.2",
+    "version": ">= 16.19.3",
     "appVersionSource": "remote"
   },
   "build": {
     "development": {
+      "environment": "development",
       "developmentClient": true,
       "distribution": "internal",
       // "channel": "development",
+      "ios": {
+        "image": "latest"
+      },
+      "env": {
+        "APP_VARIANT": "development"
+      }
+    },
+    "preview": {
+      "distribution": "store",
+      "environment": "development",
+      // "channel": "preview",
+      "env": {
+        "APP_VARIANT": "preview"
+      },
+      "ios": {
+        "image": "latest"
+      }
+    },
+    "production": {
+      "environment": "production",
+      "autoIncrement": true,
+      // "channel": "production",
+      "env": {
+        "APP_VARIANT": "production"
+      },
       "ios": {
         "image": "latest"
       }
