--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -3,13 +3,13 @@
   "main": "expo-router/entry",
   "version": "0.0.0",
   "scripts": {
-    "start": "expo start --clear",
-    "prebuild": "expo prebuild ",
+    "start": "APP_VARIANT=development expo start --clear",
+    "prebuild": "APP_VARIANT=development expo prebuild ",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web",
-    "lint": "expo lint"
+    "android": "APP_VARIANT=development expo run:android",
+    "ios": "APP_VARIANT=development expo run:ios",
+    "web": "APP_VARIANT=development expo start --web",
+    "lint": "APP_VARIANT=development expo lint"
   },
   "dependencies": {
     "@ai-sdk/react": "^2.0.37",
