--- a/apps/supabase/package.json
+++ b/apps/supabase/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "supabase",
+  "name": "@jumo-monorepo/supabase",
   "version": "1.0.0",
   "description": "database for jumo",
   "license": "ISC",
   "author": "",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "supabase start",
+    "stop": "supabase stop"
+  },
+  "devDependencies": {
+    "supabase": "^2.47.2"
   }
 }
