--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -37,6 +37,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "express-jwt": "^8.5.1",
+    "heic-convert": "^2.1.0",
     "jwks-rsa": "^3.2.0",
     "multer": "^2.0.2",
     "pg": "^8.16.3",
@@ -53,6 +54,7 @@
     "@types/body-parser": "^1.19.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/heic-convert": "^2.1.0",
     "@types/jest": "^30.0.0",
     "@types/morgan": "^1.9.10",
     "@types/multer": "^2.0.0",
