--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -32,6 +32,7 @@
     "@ai-sdk/cerebras": "^1.0.22",
     "@ai-sdk/openai": "^2.0.46",
     "@jumo-monorepo/logger": "*",
+    "@jumo-monorepo/interfaces": "*",
     "@openfoodfacts/openfoodfacts-nodejs": "^2.0.0-alpha.19",
     "ai": "^5.0.62",
     "body-parser": "^2.2.0",
