--- a/apps/api/.env.default
+++ b/apps/api/.env.default
@@ -1,11 +1,20 @@
 NODE_ENV=development
+APP_ENV=
 
 AUTH_AUDIENCE=placeholder
 AUTH_DOMAIN=placeholder
 AUTH_JWT_SECRET=placeholder
+
+SUPABASE_URL=
+SUPABASE_SERVICE_KEY=
 
 DB_HOSTNAME=db
 DB_PORT=5432
 DB_NAME=
 DB_USERNAME=
 DB_PASSWORD=
+
+OPENAI_API_KEY=
+CEREBRAS_API_KEY=
+
+USDA_API_KEY=
