--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -9,7 +9,9 @@
     "android": "APP_VARIANT=development expo run:android",
     "ios": "APP_VARIANT=development expo run:ios",
     "web": "APP_VARIANT=development expo start --web",
-    "lint": "APP_VARIANT=development expo lint"
+    "lint": "APP_VARIANT=development expo lint",
+    "build:ios:dev": "eas build --platform ios --profile development --local",
+    "check-expo-deps": "APP_VARIANT=development expo install --check"
   },
   "dependencies": {
     "@ai-sdk/react": "^2.0.37",
@@ -26,19 +28,19 @@
     "@tanstack/react-query": "^5.90.2",
     "@ungap/structured-clone": "^1.3.0",
     "ai": "^5.0.60",
-    "expo": "54.0.12",
+    "expo": "54.0.13",
     "expo-apple-authentication": "~8.0.7",
     "expo-blur": "~15.0.7",
     "expo-camera": "~17.0.8",
     "expo-constants": "~18.0.9",
-    "expo-dev-client": "~6.0.13",
+    "expo-dev-client": "~6.0.14",
     "expo-font": "~14.0.8",
     "expo-glass-effect": "~0.1.4",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.9",
     "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.10",
+    "expo-router": "~6.0.11",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
