--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -38,6 +38,8 @@
     "ai": "^5.0.62",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "express": "^5.1.0",
     "express-jwt": "^8.5.1",
     "heic-convert": "^2.1.0",
