--- a/packages/interfaces/package.json
+++ b/packages/interfaces/package.json
@@ -3,9 +3,17 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
-  "main": "./src/index.ts",
-  "types": "./src/index.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "scripts": {
+    "build": "tsc",
+    "dev": "tsc -w"
+  },
   "dependencies": {
     "zod": "^4.1.12"
+  },
+  "devDependencies": {
+    "@jumo-monorepo/typescript-config": "*",
+    "typescript": "^5.7.3"
   }
 }
