--- a/apps/mobile/eas.json
+++ b/apps/mobile/eas.json
@@ -8,7 +8,7 @@
       "environment": "development",
       "developmentClient": true,
       "distribution": "internal",
-      // "channel": "development",
+      "channel": "development",
       "ios": {
         "image": "latest"
       },
@@ -19,7 +19,7 @@
     "preview": {
       "distribution": "store",
       "environment": "preview",
-      // "channel": "preview",
+      "channel": "preview",
       "env": {
         "APP_VARIANT": "preview"
       },
@@ -30,7 +30,7 @@
     "production": {
       "environment": "production",
       "autoIncrement": true,
-      // "channel": "production",
+      "channel": "production",
       "env": {
         "APP_VARIANT": "production"
       },
