--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "start": "APP_VARIANT=development expo start --clear",
-    "prebuild": "APP_VARIANT=development expo prebuild ",
+    "prebuild": "APP_VARIANT=development expo prebuild --clean",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "APP_VARIANT=development expo run:android",
     "ios": "APP_VARIANT=development expo run:ios",
@@ -31,17 +31,18 @@
     "ai": "^5.0.60",
     "expo": "54.0.13",
     "expo-apple-authentication": "~8.0.7",
+    "expo-application": "~7.0.7",
     "expo-blur": "~15.0.7",
     "expo-camera": "~17.0.8",
     "expo-constants": "~18.0.9",
-    "expo-dev-client": "~6.0.14",
+    "expo-dev-client": "~6.0.15",
     "expo-font": "~14.0.8",
     "expo-glass-effect": "~0.1.4",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.9",
     "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.11",
+    "expo-router": "~6.0.12",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
