fix: update package.json scripts

--- a/apps/supabase/package.json
+++ b/apps/supabase/package.json
@@ -6,7 +6,7 @@
   "author": "",
   "type": "module",
   "scripts": {
-    "start": "supabase start",
+    "dev": "supabase start",
     "stop": "supabase stop"
   },
   "devDependencies": {
