--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -25,34 +25,34 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@stardazed/streams-text-encoding": "^1.0.2",
-    "@supabase/supabase-js": "^2.57.2",
+    "@supabase/supabase-js": "^2.75.0",
     "@tanstack/react-query": "^5.90.2",
     "@ungap/structured-clone": "^1.3.0",
-    "ai": "^5.0.60",
-    "expo": "54.0.13",
+    "ai": "^5.0.76",
+    "expo": "54.0.17",
     "expo-apple-authentication": "~8.0.7",
     "expo-application": "~7.0.7",
     "expo-blur": "~15.0.7",
     "expo-camera": "~17.0.8",
-    "expo-constants": "~18.0.9",
-    "expo-dev-client": "~6.0.15",
+    "expo-constants": "~18.0.10",
+    "expo-dev-client": "~6.0.16",
     "expo-font": "~14.0.8",
     "expo-glass-effect": "~0.1.4",
     "expo-haptics": "~15.0.7",
-    "expo-image": "~3.0.9",
+    "expo-image": "~3.0.10",
     "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.12",
+    "expo-router": "~6.0.13",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
-    "expo-system-ui": "~6.0.7",
+    "expo-system-ui": "~6.0.8",
     "expo-updates": "~29.0.12",
     "expo-web-browser": "~15.0.8",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.64.0",
-    "react-native": "0.81.4",
+    "react-native": "0.81.5",
     "react-native-date-picker": "^5.0.13",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
@@ -68,7 +68,7 @@
     "@types/react": "^19.1.13",
     "eslint": "^9.37.0",
     "eslint-config-expo": "~10.0.0",
-    "typescript": "~5.9.3"
+    "typescript": "^5.9.3"
   },
   "private": true
 }
