--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -20,7 +20,7 @@
     "eslint-plugin-only-warn": "^1.1.0",
     "globals": "^16.4.0",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "~5.9.3",
+    "typescript": "^5.9.3",
     "typescript-eslint": "^8.46.0"
   }
 }
