--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -25,7 +25,7 @@
     "@types/node": "^22.18.12",
     "eslint": "^9.37.0",
     "jest": "^30.2.0",
-    "typescript": "~5.9.3"
+    "typescript": "^5.9.3"
   },
   "dependencies": {
     "logform": "^2.7.0",
