--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -15,7 +15,7 @@
     "@jumo-monorepo/typescript-config": "*",
     "@types/react": "^19.1.13",
     "eslint": "^9.37.0",
-    "typescript": "~5.9.3"
+    "typescript": "^5.9.3"
   },
   "dependencies": {
     "class-variance-authority": "^0.7.1",
