--- a/packages/interfaces/package.json
+++ b/packages/interfaces/package.json
@@ -7,13 +7,16 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "dev": "tsc -w"
+    "dev": "tsc -w",
+    "lint": "eslint ."
   },
   "dependencies": {
     "zod": "^4.1.12"
   },
   "devDependencies": {
     "@jumo-monorepo/typescript-config": "*",
+    "@jumo-monorepo/eslint-config": "*",
+    "eslint": "^9.38.0",
     "typescript": "^5.9.3"
   }
 }
