--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -9,7 +9,7 @@
     "android": "APP_VARIANT=development expo run:android",
     "ios": "APP_VARIANT=development expo run:ios",
     "web": "APP_VARIANT=development expo start --web",
-    "lint": "APP_VARIANT=development expo lint",
+    "lint": "APP_VARIANT=development expo lint .",
     "build:ios:dev": "eas build --platform ios --profile development --local",
     "check-expo-deps": "APP_VARIANT=development expo install --check"
   },
@@ -24,11 +24,9 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
-    "@stardazed/streams-text-encoding": "^1.0.2",
     "@supabase/supabase-js": "^2.78.0",
     "@tanstack/react-query": "^5.90.2",
-    "@ungap/structured-clone": "^1.3.0",
-    "ai": "^5.0.84",
+    "ai": "^5.0.86",
     "expo": "54.0.21",
     "expo-apple-authentication": "~8.0.7",
     "expo-application": "~7.0.7",
@@ -58,6 +56,7 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
