--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -3,18 +3,17 @@
   "version": "0.0.0",
   "private": true,
   "files": [
-    "library.js",
-    "next.mjs",
-    "react-internal.js",
+    "base.mjs",
+    "react-internal.mjs",
     "server.mjs"
   ],
   "devDependencies": {
-    "@eslint/js": "^9.38.0",
+    "@eslint/js": "^9.39.0",
     "@typescript-eslint/eslint-plugin": "^8.46.2",
     "@typescript-eslint/parser": "^8.46.2",
-    "eslint": "^9.38.0",
+    "eslint": "^9.39.0",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-config-turbo": "^2.5.8",
+    "eslint-config-turbo": "^2.6.0",
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-only-warn": "^1.1.0",
